--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,5 +1,17 @@
 server {
     listen 80;
+    server_name godown.himeshkundal.tech;
+
+    # Redirect all HTTP requests to HTTPS
+    return 301 https://$host$request_uri;
+}
+
+server {
+    listen 443 ssl;
+    server_name godown.himeshkundal.tech;
+
+    ssl_certificate /etc/letsencrypt/live/godown.himeshkundal.tech/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/godown.himeshkundal.tech/privkey.pem;
 
     location / {
         root /usr/share/nginx/html;
@@ -7,7 +19,7 @@ server {
     }
 
     location /api/ {
-        proxy_pass http://backend:3069;
+        proxy_pass http://backend:3000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
