--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -10,4 +10,5 @@ RUN npm run build
 FROM nginx:alpine AS production-stage
 COPY --from=build-stage /app/dist /usr/share/nginx/html
 EXPOSE 80
+EXPOSE 443
 CMD ["nginx", "-g", "daemon off;"]
