--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,7 +1,20 @@
+# Use the official Node.js image
 FROM node:22
-WORKDIR /app
+
+# Set the working directory
+WORKDIR /usr/src/app
+
+# Copy package.json and package-lock.json
 COPY package*.json ./
+
+# Install dependencies
 RUN npm install
+
+# Copy the rest of the application code
 COPY . .
+
+# Expose the port your app runs on
 EXPOSE 3069
-CMD ["node", "server.js"]
+
+# Command to run the application
+CMD ["node", "server.js"] 
