--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,28 +1,39 @@
 server {
     listen 80;
-    server_name godown.himeshkundal.tech;
+    server_name godown.himeshkundal.tech www.godown.himeshkundal.tech;
 
-    # Redirect all HTTP requests to HTTPS
+    # Redirect all HTTP traffic to HTTPS
     return 301 https://$host$request_uri;
 }
 
 server {
     listen 443 ssl;
-    server_name godown.himeshkundal.tech;
+    server_name godown.himeshkundal.tech www.godown.himeshkundal.tech;
 
-    ssl_certificate /etc/letsencrypt/live/godown.himeshkundal.tech/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/godown.himeshkundal.tech/privkey.pem;
+    # SSL configuration
+    ssl_certificate /etc/letsencrypt/live/godown.himeshkundal.tech/fullchain.pem;       # Update with your certificate path
+    ssl_certificate_key /etc/letsencrypt/live/godown.himeshkundal.tech/privkey.pem; # Update with your private key path
 
+    # Set the root directory for the frontend
+    root /usr/share/nginx/html;
+    index index.html;
+
+    # Serve static files
     location / {
-        root /usr/share/nginx/html;
-        try_files $uri /index.html;
+        try_files $uri $uri/ /index.html;
     }
 
-    location /api/ {
-        proxy_pass http://backend:3069;
+    # Proxy requests to the backend API
+    location /api {
+        proxy_pass http://backend_service:3069; # Update with your backend service and port
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
+
+    # Optional: Enable Gzip compression
+    gzip on;
+    gzip_types text/css application/javascript image/svg+xml;
+    gzip_min_length 256;
 }
