--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -2,18 +2,6 @@ server {
     listen 80;
     server_name godown.himeshkundal.tech www.godown.himeshkundal.tech;
 
-    # Redirect all HTTP traffic to HTTPS
-    return 301 https://$host$request_uri;
-}
-
-server {
-    listen 443 ssl;
-    server_name godown.himeshkundal.tech www.godown.himeshkundal.tech;
-
-    # SSL configuration
-    ssl_certificate /etc/letsencrypt/live/godown.himeshkundal.tech/fullchain.pem;       # Update with your certificate path
-    ssl_certificate_key /etc/letsencrypt/live/godown.himeshkundal.tech/privkey.pem; # Update with your private key path
-
     # Set the root directory for the frontend
     root /usr/share/nginx/html;
     index index.html;
@@ -25,7 +13,7 @@ server {
 
     # Proxy requests to the backend API
     location /api {
-        proxy_pass http://backend_service:3069; # Update with your backend service and port
+        proxy_pass http://backend:3069; # Update with your backend service name and port
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
